--- a/index.html
+++ b/index.html
@@ -7,62 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayush Raj's Personal Webpage</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #444;
-            padding: 0.5rem 0;
-        }
-        nav a {
-            color: white;
-            margin: 0 1rem;
-            text-decoration: none;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        .container {
-            padding: 2rem;
-        }
-        h2 {
-            color: #333;
-        }
-        .section {
-            margin-bottom: 2rem;
-            background: white;
-            padding: 1rem;
-            border-radius: 5px;
-        }
-        .profile-pic {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-        .profile-pic img {
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem 0;
-        }
-    </style>
+    
 </head>
 <body>
     <header>
@@ -74,7 +19,7 @@
         <div class="bar"></div>
         <div class="bar"></div>
     </div>
-    <nav>
+    <nav id = "nav-menu">
         <a href="#about">About</a>
         <a href="#education">Education</a>
         <a href="#skills">Skills</a>
