--- a/index.html
+++ b/index.html
@@ -88,18 +88,12 @@
         </section>
         <section id="download" class="section download-section">
             <h2>Documents</h2>
-            <div class="download-links">
-                <div class="download-link">
-                    <a href="resume.pdf" download>Resume</a>
-                </div>
-                <div class="download-link">
-                    <a href="portfolio.docx" download>Marksheet</a>
-                </div>
-                <div class="download-link">
-                    <a href="project.zip" download>project</a>
-                </div>
-                <!-- Add more download links as needed -->
-            </div>
+            <ul>
+                <li><a href="Resume.pdf" download>Resume</a></li>
+                <li><a href="marksheet.docx" download>Marksheet</a></li>
+                <li><a href="project.zip" download>Projects</a></li>
+                <li><a href="" download></a></li>
+            </ul>
         </section>
     </div>
     <footer>
