--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>Hello! My name is Ayush Raj. I am from Bihar. I am a 4th-year undergraduate student pursuing a dual degree in Mining Engineering at IIT Kharagpur. I love to coding, I love to solve problems, and I really want to work as a software engineer. I want to take on challenging tasks and experience the thrill that comes from using code to solve elegant problems. My motivation to keep learning and getting better at programming has led me to explore with several languages and technologies. In order to enhance technical developments, I'm dedicated to developing my abilities, seizing new possibilities, and working with like-minded individuals as I work toward my goal of becoming a software engineer.</p>
+            <p>Hello! My name is Ayush Raj. I am from Bihar. I am a 4th-year undergraduate student pursuing a dual degree in Mining Engineering at IIT Kharagpur. I love coding, I love to solve problems, and I really want to work as a software engineer. I want to take on challenging tasks and experience the thrill that comes from using code to solve elegant problems. My motivation to keep learning and getting better at programming has led me to explore with several languages and technologies. In order to enhance technical developments, I'm dedicated to developing my abilities, seizing new possibilities, and working with like-minded individuals as I work toward my goal of becoming a software engineer.</p>
         </section>
         <section id="education" class="section">
             <h2>Education</h2>
