--- a/index.html
+++ b/index.html
@@ -59,13 +59,24 @@
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
+            <h3>Search and Download Images</h3>
+            <p>A dynamic web application that allows users to search, view, and download high-quality images. It leverages the Pexels API to fetch a vast collection of images and provides an intuitive interface for users to interact with these images seamlessly.</p>
+            <li><a href="https://ayushrsbp.github.io/Image-World/" target="_blank">Image World</a></li>
+            
+            <h3>Snake Game Website</h3>
+            <p>A modern, interactive web-based Snake game developed using HTML, CSS, and JavaScript. The game features dynamic gameplay with sound effects and a scoring system, providing an engaging user experience. It demonstrates proficiency in front-end development, DOM manipulation, and basic game mechanics.</p>
+            <li><a href="https://ayushrsbp.github.io/Snake-Game/" target="_blank">Snake Game</a></li>
+
+            <h3>Book World</h3>
             <p>I created a dummy website of online book shop during my first year of college. This project involved using HTML, and CSS to build a functional and user-friendly website.</p>
             <li><a href="https://ayushrsbp.github.io/myfirstwebsite/" target="_blank">Book World</a></li>
         </section>
         <section id="achievements" class="section">
             <h2>Achievements</h2>
             <ul>
-                <li>Cracked National Talent Search Examination in 8th Standard.</li>
+                <li>Felicitated with the prestigious National Talent Search Examination (NTSE) Scholarship by NCERT, Government of India</li>
+                <li>Cracked Pre Regional Mathematics Olympiad 2020 conducted by Homi Bhabha Centre for Science Education</li>
+                <li>Selected for Inpire Scholarship in 2020 by the Dpartment of Science and Technology, Government of India</li>
                 <li>Participant of State Level Quiz Competition "TARANG" organized by Bihar Government in 8th Standard.</li>
                 <li>Participant of National Level Quiz Competition "Bharat Ko Jano" organized by Bharat Vikas Parishad in 9th standard.</li>
                 <li>Runner-up of State Level Quiz "Election Knowledge" organized by Election Commission of India in 10th standard.</li>
