--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <ul>
                 <li><a href="https://www.instagram.com/ayushraj.sbp/" target="_blank">Instagram</a></li>
                 <li><a href="https://www.facebook.com/ayushrajsbp?mibextid=ZbWKwL" target="_blank">Facebook</a></li>
-                <li><a href="https://www.linkedin.com/in/ayushraj" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/ayushrajsbp" target="_blank">LinkedIn</a></li>
                 <li><a href="https://github.com/ayushrsbp" target="_blank">GitHub</a></li>
             </ul>
         </section>
