--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <h1>Ayush Raj</h1>
-        <p>4th Year Undergraduate Student of Mining Engineering at IIT Kharagpur</p>
+        <h3>Ayush Raj</h3>
+        <p><h2>Full Stack Java Developer | IIT Kharagpur</h2></p>
     </header>
     <div class="hamburger" onclick="toggleMenu()">
         <div class="bar"></div>
