--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Ayush Raj</h1>
-        <p><Full Stack Java Developer | IIT Kharagpur</p>
+        <p>Full Stack Java Developer | IIT Kharagpur</p>
     </header>
     <div class="hamburger" onclick="toggleMenu()">
         <div class="bar"></div>
