--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <section id="download" class="section">
             <h2>Documents</h2>
             <ul>
-                <li><a href="Ayush_Raj_Full_Stack_Developer_1.pdf" download>Resume</a></li>
+                <li><a href="Resume_Ayush_Raj.pdf" download>Resume</a></li>
                 <li><a href="marksheet.docx" download>Marksheet</a></li>
                 <li><a href="project.zip" download>Projects</a></li>
                 <li><a href="" download></a></li>
