--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header-container">
             <h1>Ayush Raj</h1>
             <p>IIT Kharagpur</p>
-            <p><span id="typed-text"></span></p>
+            <div><span id="typed-text"></span></div>
         </div>
     </header>
 
@@ -146,4 +146,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
