--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <a href="https://www.linkedin.com/in/ayushrajsbp" target="_blank">LinkedIn</a> | 
                 <a href="https://github.com/ayushrsbp" target="_blank">GitHub</a>
             </div>
-             <a href="AyushRaj_5.pdf" class="btn" download>Download Resume</a>
+             <a href="Ayush_Raj_IITKGP-2.pdf" class="btn" download>Download Resume</a>
         </section>
     </main>
 
@@ -146,5 +146,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
